--- a/client/src/styles/components/dialog/learn_info/LearnInfoDialog.module.scss
+++ b/client/src/styles/components/dialog/learn_info/LearnInfoDialog.module.scss
@@ -27,11 +27,12 @@
 
     &__content {
         width: 100%;
-        height: auto;
+        max-height: 90vh;
         padding: 20px 20px;
         background-color: white;
         border-radius: 3px;
         position: relative;
+        overflow-y: auto;
     }
 
     &__closeButton {
