--- a/client/src/styles/components/ui/button/RoundButton.module.scss
+++ b/client/src/styles/components/ui/button/RoundButton.module.scss
@@ -1,7 +1,7 @@
 @import '../../../colors.scss';
 
 .mainBlock {
-    width: inherit;
+    width: 100%;
     height: 50px;
     padding: 0 30px;
     border-radius: 25px;
