--- a/client/src/styles/pages/Home.module.scss
+++ b/client/src/styles/pages/Home.module.scss
@@ -17,7 +17,6 @@ $content-padding-x: 15px;
     &__content {
         width: inherit;
         height: 100%;
-        min-height: 100%;
         display: flex;
         flex-direction: column;
         position: relative;
@@ -26,8 +25,7 @@ $content-padding-x: 15px;
 
     &__baseContent {
         width: inherit;
-        height: inherit;
-        min-height: inherit;
+        min-height: 100%;
         display: grid;
         grid-template-rows: auto 1fr auto;
         gap: 15px;
@@ -41,7 +39,18 @@ $content-padding-x: 15px;
     }
 
     &__calendarBlock {
-        height: inherit;
+        width: inherit;
+        min-height: 100%;
+        padding: 20px 0;
+        display: flex;
+        gap: 20px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__startButtonBlock {
+        width: 90%;
     }
 
     &__dropBoxBlock {
