--- a/client/src/styles/pages/Wrapper.module.scss
+++ b/client/src/styles/pages/Wrapper.module.scss
@@ -2,7 +2,7 @@
 
 .content {
     width: inherit;
-    height: 100vh;
+    max-height: 100vh;
     position: relative;
     padding: 50px 15px;
 }
